# -------------------------------------------------------------------------------------------------
# CMake version
# -------------------------------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.10 FATAL_ERROR)


# -------------------------------------------------------------------------------------------------
# Project setup
# -------------------------------------------------------------------------------------------------
project(OccSceneInteractionService LANGUAGES CXX)


# -------------------------------------------------------------------------------------------------
# Language requirements
# -------------------------------------------------------------------------------------------------
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


# -------------------------------------------------------------------------------------------------
# Additional includes
# -------------------------------------------------------------------------------------------------
include(GenerateExportHeader)


# -------------------------------------------------------------------------------------------------
# Add project(s)
# -------------------------------------------------------------------------------------------------
add_subdirectory(src)
