# -------------------------------------------------------------------------------------------------
# Set Test Executable
# -------------------------------------------------------------------------------------------------
project(TestsOccSceneInteractionService)


# -------------------------------------------------------------------------------------------------
# Define Test Executable Name
# -------------------------------------------------------------------------------------------------
set(TEST_EXECUTABLE_NAME TestsOccSceneInteractionService)


# -------------------------------------------------------------------------------------------------
# Add Executable
# -------------------------------------------------------------------------------------------------
add_executable(${TEST_EXECUTABLE_NAME})


# -------------------------------------------------------------------------------------------------
# Add Executable Sources
# -------------------------------------------------------------------------------------------------
target_sources(${TEST_EXECUTABLE_NAME} 
    PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}/src/main.cpp)


# -------------------------------------------------------------------------------------------------
# Find Packages
# -------------------------------------------------------------------------------------------------
find_package(OpenCASCADE REQUIRED COMPONENTS ${OpenCASCADE_Visualization_LIBRARIES})


# -------------------------------------------------------------------------------------------------
# Link Libraries
# -------------------------------------------------------------------------------------------------
target_link_libraries(
    ${TEST_EXECUTABLE_NAME}
        PRIVATE
            GTest::gtest_main
            ${OpenCASCADE_Visualization_LIBRARIES}
)


# -------------------------------------------------------------------------------------------------
# Include Paths
# -------------------------------------------------------------------------------------------------
target_include_directories(
    ${TEST_EXECUTABLE_NAME}
        PRIVATE
            ${CMAKE_SOURCE_DIR}/src/OccSceneInteractionService/include
            ${OpenCASCADE_INCLUDE_DIR}
)


# -------------------------------------------------------------------------------------------------
# Make Tests Available for CTEST
# -------------------------------------------------------------------------------------------------
gtest_discover_tests(${TEST_EXECUTABLE_NAME}
                     DISCOVERY_TIMEOUT 15)
